log
Wed 19 Apr 2023 02:37:36 AM UTC: 
 tests:  1|8
total_score: 0/70
e35ad30
Thu 20 Apr 2023 04:36:37 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current = NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeNode * root = NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
d7528a1
